parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program_start
Rule 1     program_start -> main_goto PROGRAM ID SEMICOL program_start_1 program_start_2 main
Rule 2     program_start_1 -> vars
Rule 3     program_start_2 -> funcs
Rule 4     program_start_2 -> empty
Rule 5     vars -> VAR type COL vars_1 SEMICOL vars
Rule 6     vars -> empty
Rule 7     vars_1 -> ID see_id vars_2 push_var vars_3
Rule 8     vars_2 -> dims_assign
Rule 9     vars_2 -> empty
Rule 10    vars_3 -> COMMA vars_1
Rule 11    vars_3 -> empty
Rule 12    dims_assign -> LBRACK see_dims_a CTEI see_dims_num dims_assign_1 RBRACK
Rule 13    dims_assign_1 -> COMMA see_dims_a CTEI see_dims_num
Rule 14    dims_assign_1 -> empty
Rule 15    type -> INT
Rule 16    type -> FLOAT
Rule 17    type -> CHAR
Rule 18    type -> BOOL
Rule 19    rtype -> INT
Rule 20    rtype -> FLOAT
Rule 21    rtype -> CHAR
Rule 22    rtype -> BOOL
Rule 23    rtype -> VOID
Rule 24    block -> LCURLY block_1 RCURLY
Rule 25    block_1 -> statement
Rule 26    funcs -> FUNC rtype ID see_id see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
Rule 27    funcs_1 -> vars
Rule 28    funcs_2 -> RETURN expression SEMICOL
Rule 29    funcs_2 -> empty
Rule 30    funcs_3 -> funcs
Rule 31    funcs_3 -> empty
Rule 32    params -> LPAR params_1 RPAR
Rule 33    params_1 -> type ID see_id params_2 see_end_param reset_dims params_3
Rule 34    params_1 -> empty
Rule 35    params_2 -> dims
Rule 36    params_2 -> empty
Rule 37    params_3 -> COMMA params_1
Rule 38    params_3 -> empty
Rule 39    assign -> ID see_id push_id assign_1 EQUAL push_equal expression generate_assign SEMICOL
Rule 40    assign_1 -> dims
Rule 41    assign_1 -> empty
Rule 42    dims -> LBRACK see_dims expression generate_g_verify_f dims_1 RBRACK dims_end
Rule 43    dims_1 -> COMMA see_dims_s expression generate_g_verify_s
Rule 44    dims_1 -> empty
Rule 45    statement -> statement_1 statement
Rule 46    statement -> empty
Rule 47    statement_1 -> assign
Rule 48    statement_1 -> cond
Rule 49    statement_1 -> cloop
Rule 50    statement_1 -> nloop
Rule 51    statement_1 -> read
Rule 52    statement_1 -> write
Rule 53    statement_1 -> loadfile
Rule 54    statement_1 -> callfunc SEMICOL
Rule 55    cond -> IF LPAR expression RPAR generate_g_if block cond_1 finish_if
Rule 56    cond_1 -> ELSE generate_g_else cond_2
Rule 57    cond_2 -> cond_3
Rule 58    cond_2 -> block
Rule 59    cond_3 -> cond
Rule 60    cond_3 -> empty
Rule 61    cloop -> WHILE cloop_push_jump LPAR expression generate_g_cloop_start RPAR block generate_g_cloop_end
Rule 62    nloop -> FROM ID see_id nloop_1 push_id nloop_2 TO expression generate_g_nloop_s block generate_g_nloop_e
Rule 63    nloop_1 -> dims
Rule 64    nloop_1 -> empty
Rule 65    nloop_2 -> push_id EQUAL push_equal expression generate_assign
Rule 66    nloop_2 -> empty
Rule 67    callfunc -> ID see_id verify_func LPAR activate_record callfunc_1 verify_p_num RPAR
Rule 68    callfunc_1 -> expression verify_params callfunc_3
Rule 69    callfunc_1 -> empty
Rule 70    callfunc_3 -> COMMA increase_p_count callfunc_1
Rule 71    callfunc_3 -> empty
Rule 72    read -> READ LPAR read_1 RPAR SEMICOL
Rule 73    read_1 -> ID see_id read_2 push_id generate_g_read read_3
Rule 74    read_2 -> dims reset_dims
Rule 75    read_2 -> empty
Rule 76    read_3 -> COMMA read_1
Rule 77    read_3 -> empty
Rule 78    write -> WRITE LPAR write_1 RPAR SEMICOL
Rule 79    write_1 -> write_2 generate_g_write write_3
Rule 80    write_2 -> expression
Rule 81    write_2 -> CTES push_string
Rule 82    write_3 -> COMMA write_1
Rule 83    write_3 -> empty
Rule 84    loadfile -> LOADFILE LPAR ID COMMA CTES COMMA loadfile_1 COMMA loadfile_2 RPAR SEMICOL
Rule 85    loadfile_1 -> CTEI
Rule 86    loadfile_1 -> ID
Rule 87    loadfile_2 -> CTEI
Rule 88    loadfile_2 -> ID
Rule 89    expression -> sexp check_and_or expression_1
Rule 90    expression_1 -> expression_2 push_and_or expression
Rule 91    expression_1 -> empty
Rule 92    expression_2 -> OR
Rule 93    expression_2 -> AND
Rule 94    sexp -> exp check_relational sexp_1
Rule 95    sexp_1 -> sexp_2 push_relational sexp
Rule 96    sexp_1 -> empty
Rule 97    sexp_2 -> ISEQUAL
Rule 98    sexp_2 -> EQUAL
Rule 99    sexp_2 -> NOTEQUAL
Rule 100   sexp_2 -> GREATERTHAN
Rule 101   sexp_2 -> GREATERORQUAL
Rule 102   sexp_2 -> LESSTHAN
Rule 103   sexp_2 -> LESSOREQUAL
Rule 104   exp -> term check_sum exp_1
Rule 105   exp_1 -> exp_2 push_sum exp
Rule 106   exp_1 -> empty
Rule 107   exp_2 -> PLUS
Rule 108   exp_2 -> MINUS
Rule 109   term -> factor check_mul_div term_1
Rule 110   term_1 -> term_2 push_mul_div term
Rule 111   term_1 -> empty
Rule 112   term_2 -> TIMES
Rule 113   term_2 -> DIV
Rule 114   factor -> factor_1
Rule 115   factor -> factor_2
Rule 116   factor_1 -> ID see_id push_id factor_3 print_value reset_dims
Rule 117   factor_1 -> callfunc
Rule 118   factor_1 -> CTEI push_int
Rule 119   factor_1 -> CTEF push_float
Rule 120   factor_1 -> CTEB push_bool
Rule 121   factor_1 -> CTEC push_char
Rule 122   factor_1 -> MINUS factor_1
Rule 123   factor_2 -> LPAR add_ff expression RPAR pop_ff
Rule 124   factor_3 -> dims
Rule 125   factor_3 -> empty
Rule 126   main -> MAIN see_id LPAR RPAR LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end
Rule 127   main_1 -> vars
Rule 128   see_id -> empty
Rule 129   see_dims -> empty
Rule 130   see_dims_s -> empty
Rule 131   generate_g_verify_f -> empty
Rule 132   generate_g_verify_s -> empty
Rule 133   dims_end -> empty
Rule 134   see_dims_a -> empty
Rule 135   see_dims_num -> empty
Rule 136   push_var -> empty
Rule 137   see_func_start -> empty
Rule 138   see_func_end -> empty
Rule 139   set_func_init -> empty
Rule 140   see_end_param -> empty
Rule 141   reset_dims -> empty
Rule 142   print_value -> empty
Rule 143   check_and_or -> empty
Rule 144   push_and_or -> empty
Rule 145   check_relational -> empty
Rule 146   push_relational -> empty
Rule 147   check_sum -> empty
Rule 148   push_sum -> empty
Rule 149   check_mul_div -> empty
Rule 150   push_mul_div -> empty
Rule 151   add_ff -> empty
Rule 152   pop_ff -> empty
Rule 153   push_int -> empty
Rule 154   push_float -> empty
Rule 155   push_bool -> empty
Rule 156   push_char -> empty
Rule 157   push_string -> empty
Rule 158   push_id -> empty
Rule 159   push_equal -> empty
Rule 160   generate_assign -> empty
Rule 161   generate_g_if -> empty
Rule 162   finish_if -> empty
Rule 163   generate_g_else -> empty
Rule 164   generate_g_read -> empty
Rule 165   generate_g_write -> empty
Rule 166   cloop_push_jump -> empty
Rule 167   generate_g_cloop_start -> empty
Rule 168   generate_g_cloop_end -> empty
Rule 169   generate_g_nloop_s -> empty
Rule 170   generate_g_nloop_e -> empty
Rule 171   generate_end -> empty
Rule 172   verify_func -> empty
Rule 173   activate_record -> empty
Rule 174   verify_params -> empty
Rule 175   increase_p_count -> empty
Rule 176   verify_p_num -> empty
Rule 177   main_goto -> empty
Rule 178   fill_main_goto -> empty
Rule 179   empty -> <empty>

Terminals, with rules where they appear

AND                  : 93
BOOL                 : 18 22
CHAR                 : 17 21
COL                  : 5
COMMA                : 10 13 37 43 70 76 82 84 84 84
COMMENT              : 
CTEB                 : 120
CTEC                 : 121
CTEF                 : 119
CTEI                 : 12 13 85 87 118
CTES                 : 81 84
DIV                  : 113
ELSE                 : 56
END                  : 126
EQUAL                : 39 65 98
FLOAT                : 16 20
FROM                 : 62
FUNC                 : 26
GREATERORQUAL        : 101
GREATERTHAN          : 100
ID                   : 1 7 26 33 39 62 67 73 84 86 88 116
IF                   : 55
INT                  : 15 19
ISEQUAL              : 97
LBRACK               : 12 42
LCURLY               : 24 26 126
LESSOREQUAL          : 103
LESSTHAN             : 102
LOADFILE             : 84
LPAR                 : 32 55 61 67 72 78 84 123 126
MAIN                 : 126
MINUS                : 108 122
NOTEQUAL             : 99
OR                   : 92
PLUS                 : 107
PROGRAM              : 1
RBRACK               : 12 42
RCURLY               : 24 26 126
READ                 : 72
RETURN               : 28
RPAR                 : 32 55 61 67 72 78 84 123 126
SEMICOL              : 1 5 28 39 54 72 78 84 126
TIMES                : 112
TO                   : 62
VAR                  : 5
VOID                 : 23
WHILE                : 61
WRITE                : 78
error                : 

Nonterminals, with rules where they appear

activate_record      : 67
add_ff               : 123
assign               : 47
assign_1             : 39
block                : 55 58 61 62
block_1              : 24
callfunc             : 54 117
callfunc_1           : 67 70
callfunc_3           : 68
check_and_or         : 89
check_mul_div        : 109
check_relational     : 94
check_sum            : 104
cloop                : 49
cloop_push_jump      : 61
cond                 : 48 59
cond_1               : 55
cond_2               : 56
cond_3               : 57
dims                 : 35 40 63 74 124
dims_1               : 42
dims_assign          : 8
dims_assign_1        : 12
dims_end             : 42
empty                : 4 6 9 11 14 29 31 34 36 38 41 44 46 60 64 66 69 71 75 77 83 91 96 106 111 125 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178
exp                  : 94 105
exp_1                : 104
exp_2                : 105
expression           : 28 39 42 43 55 61 62 65 68 80 90 123
expression_1         : 89
expression_2         : 90
factor               : 109
factor_1             : 114 122
factor_2             : 115
factor_3             : 116
fill_main_goto       : 126
finish_if            : 55
funcs                : 3 30
funcs_1              : 26
funcs_2              : 26
funcs_3              : 26
generate_assign      : 39 65
generate_end         : 126
generate_g_cloop_end : 61
generate_g_cloop_start : 61
generate_g_else      : 56
generate_g_if        : 55
generate_g_nloop_e   : 62
generate_g_nloop_s   : 62
generate_g_read      : 73
generate_g_verify_f  : 42
generate_g_verify_s  : 43
generate_g_write     : 79
increase_p_count     : 70
loadfile             : 53
loadfile_1           : 84
loadfile_2           : 84
main                 : 1
main_1               : 126
main_goto            : 1
nloop                : 50
nloop_1              : 62
nloop_2              : 62
params               : 26
params_1             : 32 37
params_2             : 33
params_3             : 33
pop_ff               : 123
print_value          : 116
program_start        : 0
program_start_1      : 1
program_start_2      : 1
push_and_or          : 90
push_bool            : 120
push_char            : 121
push_equal           : 39 65
push_float           : 119
push_id              : 39 62 65 73 116
push_int             : 118
push_mul_div         : 110
push_relational      : 95
push_string          : 81
push_sum             : 105
push_var             : 7
read                 : 51
read_1               : 72 76
read_2               : 73
read_3               : 73
reset_dims           : 33 74 116
rtype                : 26
see_dims             : 42
see_dims_a           : 12 13
see_dims_num         : 12 13
see_dims_s           : 43
see_end_param        : 33
see_func_end         : 26
see_func_start       : 26 126
see_id               : 7 26 33 39 62 67 73 116 126
set_func_init        : 26 126
sexp                 : 89 95
sexp_1               : 94
sexp_2               : 95
statement            : 25 26 45 126
statement_1          : 45
term                 : 104 110
term_1               : 109
term_2               : 110
type                 : 5 33
vars                 : 2 5 27 127
vars_1               : 5 10
vars_2               : 7
vars_3               : 7
verify_func          : 67
verify_p_num         : 67
verify_params        : 68
write                : 52
write_1              : 78 82
write_2              : 79
write_3              : 79

Parsing method: LALR

state 0

    (0) S' -> . program_start
    (1) program_start -> . main_goto PROGRAM ID SEMICOL program_start_1 program_start_2 main
    (177) main_goto -> . empty
    (179) empty -> .

    PROGRAM         reduce using rule 179 (empty -> .)

    program_start                  shift and go to state 1
    main_goto                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program_start .



state 2

    (1) program_start -> main_goto . PROGRAM ID SEMICOL program_start_1 program_start_2 main

    PROGRAM         shift and go to state 4


state 3

    (177) main_goto -> empty .

    PROGRAM         reduce using rule 177 (main_goto -> empty .)


state 4

    (1) program_start -> main_goto PROGRAM . ID SEMICOL program_start_1 program_start_2 main

    ID              shift and go to state 5


state 5

    (1) program_start -> main_goto PROGRAM ID . SEMICOL program_start_1 program_start_2 main

    SEMICOL         shift and go to state 6


state 6

    (1) program_start -> main_goto PROGRAM ID SEMICOL . program_start_1 program_start_2 main
    (2) program_start_1 -> . vars
    (5) vars -> . VAR type COL vars_1 SEMICOL vars
    (6) vars -> . empty
    (179) empty -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 179 (empty -> .)
    MAIN            reduce using rule 179 (empty -> .)

    program_start_1                shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 10

state 7

    (1) program_start -> main_goto PROGRAM ID SEMICOL program_start_1 . program_start_2 main
    (3) program_start_2 -> . funcs
    (4) program_start_2 -> . empty
    (26) funcs -> . FUNC rtype ID see_id see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (179) empty -> .

    FUNC            shift and go to state 14
    MAIN            reduce using rule 179 (empty -> .)

    program_start_2                shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13

state 8

    (2) program_start_1 -> vars .

    FUNC            reduce using rule 2 (program_start_1 -> vars .)
    MAIN            reduce using rule 2 (program_start_1 -> vars .)


state 9

    (5) vars -> VAR . type COL vars_1 SEMICOL vars
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . CHAR
    (18) type -> . BOOL

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    BOOL            shift and go to state 19

    type                           shift and go to state 15

state 10

    (6) vars -> empty .

    FUNC            reduce using rule 6 (vars -> empty .)
    MAIN            reduce using rule 6 (vars -> empty .)
    ID              reduce using rule 6 (vars -> empty .)
    IF              reduce using rule 6 (vars -> empty .)
    WHILE           reduce using rule 6 (vars -> empty .)
    FROM            reduce using rule 6 (vars -> empty .)
    READ            reduce using rule 6 (vars -> empty .)
    WRITE           reduce using rule 6 (vars -> empty .)
    LOADFILE        reduce using rule 6 (vars -> empty .)
    END             reduce using rule 6 (vars -> empty .)
    RETURN          reduce using rule 6 (vars -> empty .)
    RCURLY          reduce using rule 6 (vars -> empty .)


state 11

    (1) program_start -> main_goto PROGRAM ID SEMICOL program_start_1 program_start_2 . main
    (126) main -> . MAIN see_id LPAR RPAR LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end

    MAIN            shift and go to state 21

    main                           shift and go to state 20

state 12

    (3) program_start_2 -> funcs .

    MAIN            reduce using rule 3 (program_start_2 -> funcs .)


state 13

    (4) program_start_2 -> empty .

    MAIN            reduce using rule 4 (program_start_2 -> empty .)


state 14

    (26) funcs -> FUNC . rtype ID see_id see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (19) rtype -> . INT
    (20) rtype -> . FLOAT
    (21) rtype -> . CHAR
    (22) rtype -> . BOOL
    (23) rtype -> . VOID

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25
    BOOL            shift and go to state 26
    VOID            shift and go to state 27

    rtype                          shift and go to state 22

state 15

    (5) vars -> VAR type . COL vars_1 SEMICOL vars

    COL             shift and go to state 28


state 16

    (15) type -> INT .

    COL             reduce using rule 15 (type -> INT .)
    ID              reduce using rule 15 (type -> INT .)


state 17

    (16) type -> FLOAT .

    COL             reduce using rule 16 (type -> FLOAT .)
    ID              reduce using rule 16 (type -> FLOAT .)


state 18

    (17) type -> CHAR .

    COL             reduce using rule 17 (type -> CHAR .)
    ID              reduce using rule 17 (type -> CHAR .)


state 19

    (18) type -> BOOL .

    COL             reduce using rule 18 (type -> BOOL .)
    ID              reduce using rule 18 (type -> BOOL .)


state 20

    (1) program_start -> main_goto PROGRAM ID SEMICOL program_start_1 program_start_2 main .

    $end            reduce using rule 1 (program_start -> main_goto PROGRAM ID SEMICOL program_start_1 program_start_2 main .)


state 21

    (126) main -> MAIN . see_id LPAR RPAR LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end
    (128) see_id -> . empty
    (179) empty -> .

    LPAR            reduce using rule 179 (empty -> .)

    see_id                         shift and go to state 29
    empty                          shift and go to state 30

state 22

    (26) funcs -> FUNC rtype . ID see_id see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3

    ID              shift and go to state 31


state 23

    (19) rtype -> INT .

    ID              reduce using rule 19 (rtype -> INT .)


state 24

    (20) rtype -> FLOAT .

    ID              reduce using rule 20 (rtype -> FLOAT .)


state 25

    (21) rtype -> CHAR .

    ID              reduce using rule 21 (rtype -> CHAR .)


state 26

    (22) rtype -> BOOL .

    ID              reduce using rule 22 (rtype -> BOOL .)


state 27

    (23) rtype -> VOID .

    ID              reduce using rule 23 (rtype -> VOID .)


state 28

    (5) vars -> VAR type COL . vars_1 SEMICOL vars
    (7) vars_1 -> . ID see_id vars_2 push_var vars_3

    ID              shift and go to state 33

    vars_1                         shift and go to state 32

state 29

    (126) main -> MAIN see_id . LPAR RPAR LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end

    LPAR            shift and go to state 34


state 30

    (128) see_id -> empty .

    LPAR            reduce using rule 128 (see_id -> empty .)
    LBRACK          reduce using rule 128 (see_id -> empty .)
    COMMA           reduce using rule 128 (see_id -> empty .)
    SEMICOL         reduce using rule 128 (see_id -> empty .)
    RPAR            reduce using rule 128 (see_id -> empty .)
    EQUAL           reduce using rule 128 (see_id -> empty .)
    TO              reduce using rule 128 (see_id -> empty .)
    TIMES           reduce using rule 128 (see_id -> empty .)
    DIV             reduce using rule 128 (see_id -> empty .)
    PLUS            reduce using rule 128 (see_id -> empty .)
    MINUS           reduce using rule 128 (see_id -> empty .)
    ISEQUAL         reduce using rule 128 (see_id -> empty .)
    NOTEQUAL        reduce using rule 128 (see_id -> empty .)
    GREATERTHAN     reduce using rule 128 (see_id -> empty .)
    GREATERORQUAL   reduce using rule 128 (see_id -> empty .)
    LESSTHAN        reduce using rule 128 (see_id -> empty .)
    LESSOREQUAL     reduce using rule 128 (see_id -> empty .)
    OR              reduce using rule 128 (see_id -> empty .)
    AND             reduce using rule 128 (see_id -> empty .)
    RBRACK          reduce using rule 128 (see_id -> empty .)
    LCURLY          reduce using rule 128 (see_id -> empty .)


state 31

    (26) funcs -> FUNC rtype ID . see_id see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (128) see_id -> . empty
    (179) empty -> .

    LPAR            reduce using rule 179 (empty -> .)

    see_id                         shift and go to state 35
    empty                          shift and go to state 30

state 32

    (5) vars -> VAR type COL vars_1 . SEMICOL vars

    SEMICOL         shift and go to state 36


state 33

    (7) vars_1 -> ID . see_id vars_2 push_var vars_3
    (128) see_id -> . empty
    (179) empty -> .

    LBRACK          reduce using rule 179 (empty -> .)
    COMMA           reduce using rule 179 (empty -> .)
    SEMICOL         reduce using rule 179 (empty -> .)

    see_id                         shift and go to state 37
    empty                          shift and go to state 30

state 34

    (126) main -> MAIN see_id LPAR . RPAR LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end

    RPAR            shift and go to state 38


state 35

    (26) funcs -> FUNC rtype ID see_id . see_func_start params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (137) see_func_start -> . empty
    (179) empty -> .

    LPAR            reduce using rule 179 (empty -> .)

    see_func_start                 shift and go to state 39
    empty                          shift and go to state 40

state 36

    (5) vars -> VAR type COL vars_1 SEMICOL . vars
    (5) vars -> . VAR type COL vars_1 SEMICOL vars
    (6) vars -> . empty
    (179) empty -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 179 (empty -> .)
    MAIN            reduce using rule 179 (empty -> .)
    ID              reduce using rule 179 (empty -> .)
    IF              reduce using rule 179 (empty -> .)
    WHILE           reduce using rule 179 (empty -> .)
    FROM            reduce using rule 179 (empty -> .)
    READ            reduce using rule 179 (empty -> .)
    WRITE           reduce using rule 179 (empty -> .)
    LOADFILE        reduce using rule 179 (empty -> .)
    END             reduce using rule 179 (empty -> .)
    RETURN          reduce using rule 179 (empty -> .)
    RCURLY          reduce using rule 179 (empty -> .)

    vars                           shift and go to state 41
    empty                          shift and go to state 10

state 37

    (7) vars_1 -> ID see_id . vars_2 push_var vars_3
    (8) vars_2 -> . dims_assign
    (9) vars_2 -> . empty
    (12) dims_assign -> . LBRACK see_dims_a CTEI see_dims_num dims_assign_1 RBRACK
    (179) empty -> .

    LBRACK          shift and go to state 45
    COMMA           reduce using rule 179 (empty -> .)
    SEMICOL         reduce using rule 179 (empty -> .)

    vars_2                         shift and go to state 42
    dims_assign                    shift and go to state 43
    empty                          shift and go to state 44

state 38

    (126) main -> MAIN see_id LPAR RPAR . LCURLY see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end

    LCURLY          shift and go to state 46


state 39

    (26) funcs -> FUNC rtype ID see_id see_func_start . params LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (32) params -> . LPAR params_1 RPAR

    LPAR            shift and go to state 48

    params                         shift and go to state 47

state 40

    (137) see_func_start -> empty .

    LPAR            reduce using rule 137 (see_func_start -> empty .)
    VAR             reduce using rule 137 (see_func_start -> empty .)
    ID              reduce using rule 137 (see_func_start -> empty .)
    IF              reduce using rule 137 (see_func_start -> empty .)
    WHILE           reduce using rule 137 (see_func_start -> empty .)
    FROM            reduce using rule 137 (see_func_start -> empty .)
    READ            reduce using rule 137 (see_func_start -> empty .)
    WRITE           reduce using rule 137 (see_func_start -> empty .)
    LOADFILE        reduce using rule 137 (see_func_start -> empty .)
    END             reduce using rule 137 (see_func_start -> empty .)


state 41

    (5) vars -> VAR type COL vars_1 SEMICOL vars .

    FUNC            reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    MAIN            reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    ID              reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    IF              reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    WHILE           reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    FROM            reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    READ            reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    WRITE           reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    LOADFILE        reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    END             reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    RETURN          reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)
    RCURLY          reduce using rule 5 (vars -> VAR type COL vars_1 SEMICOL vars .)


state 42

    (7) vars_1 -> ID see_id vars_2 . push_var vars_3
    (136) push_var -> . empty
    (179) empty -> .

    COMMA           reduce using rule 179 (empty -> .)
    SEMICOL         reduce using rule 179 (empty -> .)

    push_var                       shift and go to state 49
    empty                          shift and go to state 50

state 43

    (8) vars_2 -> dims_assign .

    COMMA           reduce using rule 8 (vars_2 -> dims_assign .)
    SEMICOL         reduce using rule 8 (vars_2 -> dims_assign .)


state 44

    (9) vars_2 -> empty .

    COMMA           reduce using rule 9 (vars_2 -> empty .)
    SEMICOL         reduce using rule 9 (vars_2 -> empty .)


state 45

    (12) dims_assign -> LBRACK . see_dims_a CTEI see_dims_num dims_assign_1 RBRACK
    (134) see_dims_a -> . empty
    (179) empty -> .

    CTEI            reduce using rule 179 (empty -> .)

    see_dims_a                     shift and go to state 51
    empty                          shift and go to state 52

state 46

    (126) main -> MAIN see_id LPAR RPAR LCURLY . see_func_start main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end
    (137) see_func_start -> . empty
    (179) empty -> .

    VAR             reduce using rule 179 (empty -> .)
    ID              reduce using rule 179 (empty -> .)
    IF              reduce using rule 179 (empty -> .)
    WHILE           reduce using rule 179 (empty -> .)
    FROM            reduce using rule 179 (empty -> .)
    READ            reduce using rule 179 (empty -> .)
    WRITE           reduce using rule 179 (empty -> .)
    LOADFILE        reduce using rule 179 (empty -> .)
    END             reduce using rule 179 (empty -> .)

    see_func_start                 shift and go to state 53
    empty                          shift and go to state 40

state 47

    (26) funcs -> FUNC rtype ID see_id see_func_start params . LCURLY funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3

    LCURLY          shift and go to state 54


state 48

    (32) params -> LPAR . params_1 RPAR
    (33) params_1 -> . type ID see_id params_2 see_end_param reset_dims params_3
    (34) params_1 -> . empty
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . CHAR
    (18) type -> . BOOL
    (179) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18
    BOOL            shift and go to state 19
    RPAR            reduce using rule 179 (empty -> .)

    params_1                       shift and go to state 55
    type                           shift and go to state 56
    empty                          shift and go to state 57

state 49

    (7) vars_1 -> ID see_id vars_2 push_var . vars_3
    (10) vars_3 -> . COMMA vars_1
    (11) vars_3 -> . empty
    (179) empty -> .

    COMMA           shift and go to state 59
    SEMICOL         reduce using rule 179 (empty -> .)

    vars_3                         shift and go to state 58
    empty                          shift and go to state 60

state 50

    (136) push_var -> empty .

    COMMA           reduce using rule 136 (push_var -> empty .)
    SEMICOL         reduce using rule 136 (push_var -> empty .)


state 51

    (12) dims_assign -> LBRACK see_dims_a . CTEI see_dims_num dims_assign_1 RBRACK

    CTEI            shift and go to state 61


state 52

    (134) see_dims_a -> empty .

    CTEI            reduce using rule 134 (see_dims_a -> empty .)


state 53

    (126) main -> MAIN see_id LPAR RPAR LCURLY see_func_start . main_1 set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end
    (127) main_1 -> . vars
    (5) vars -> . VAR type COL vars_1 SEMICOL vars
    (6) vars -> . empty
    (179) empty -> .

    VAR             shift and go to state 9
    ID              reduce using rule 179 (empty -> .)
    IF              reduce using rule 179 (empty -> .)
    WHILE           reduce using rule 179 (empty -> .)
    FROM            reduce using rule 179 (empty -> .)
    READ            reduce using rule 179 (empty -> .)
    WRITE           reduce using rule 179 (empty -> .)
    LOADFILE        reduce using rule 179 (empty -> .)
    END             reduce using rule 179 (empty -> .)

    main_1                         shift and go to state 62
    vars                           shift and go to state 63
    empty                          shift and go to state 10

state 54

    (26) funcs -> FUNC rtype ID see_id see_func_start params LCURLY . funcs_1 set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (27) funcs_1 -> . vars
    (5) vars -> . VAR type COL vars_1 SEMICOL vars
    (6) vars -> . empty
    (179) empty -> .

    VAR             shift and go to state 9
    ID              reduce using rule 179 (empty -> .)
    IF              reduce using rule 179 (empty -> .)
    WHILE           reduce using rule 179 (empty -> .)
    FROM            reduce using rule 179 (empty -> .)
    READ            reduce using rule 179 (empty -> .)
    WRITE           reduce using rule 179 (empty -> .)
    LOADFILE        reduce using rule 179 (empty -> .)
    RETURN          reduce using rule 179 (empty -> .)
    RCURLY          reduce using rule 179 (empty -> .)

    funcs_1                        shift and go to state 64
    vars                           shift and go to state 65
    empty                          shift and go to state 10

state 55

    (32) params -> LPAR params_1 . RPAR

    RPAR            shift and go to state 66


state 56

    (33) params_1 -> type . ID see_id params_2 see_end_param reset_dims params_3

    ID              shift and go to state 67


state 57

    (34) params_1 -> empty .

    RPAR            reduce using rule 34 (params_1 -> empty .)


state 58

    (7) vars_1 -> ID see_id vars_2 push_var vars_3 .

    SEMICOL         reduce using rule 7 (vars_1 -> ID see_id vars_2 push_var vars_3 .)


state 59

    (10) vars_3 -> COMMA . vars_1
    (7) vars_1 -> . ID see_id vars_2 push_var vars_3

    ID              shift and go to state 33

    vars_1                         shift and go to state 68

state 60

    (11) vars_3 -> empty .

    SEMICOL         reduce using rule 11 (vars_3 -> empty .)


state 61

    (12) dims_assign -> LBRACK see_dims_a CTEI . see_dims_num dims_assign_1 RBRACK
    (135) see_dims_num -> . empty
    (179) empty -> .

    COMMA           reduce using rule 179 (empty -> .)
    RBRACK          reduce using rule 179 (empty -> .)

    see_dims_num                   shift and go to state 69
    empty                          shift and go to state 70

state 62

    (126) main -> MAIN see_id LPAR RPAR LCURLY see_func_start main_1 . set_func_init fill_main_goto statement END SEMICOL RCURLY generate_end
    (139) set_func_init -> . empty
    (179) empty -> .

    ID              reduce using rule 179 (empty -> .)
    IF              reduce using rule 179 (empty -> .)
    WHILE           reduce using rule 179 (empty -> .)
    FROM            reduce using rule 179 (empty -> .)
    READ            reduce using rule 179 (empty -> .)
    WRITE           reduce using rule 179 (empty -> .)
    LOADFILE        reduce using rule 179 (empty -> .)
    END             reduce using rule 179 (empty -> .)

    set_func_init                  shift and go to state 71
    empty                          shift and go to state 72

state 63

    (127) main_1 -> vars .

    ID              reduce using rule 127 (main_1 -> vars .)
    IF              reduce using rule 127 (main_1 -> vars .)
    WHILE           reduce using rule 127 (main_1 -> vars .)
    FROM            reduce using rule 127 (main_1 -> vars .)
    READ            reduce using rule 127 (main_1 -> vars .)
    WRITE           reduce using rule 127 (main_1 -> vars .)
    LOADFILE        reduce using rule 127 (main_1 -> vars .)
    END             reduce using rule 127 (main_1 -> vars .)


state 64

    (26) funcs -> FUNC rtype ID see_id see_func_start params LCURLY funcs_1 . set_func_init statement funcs_2 see_func_end RCURLY funcs_3
    (139) set_func_init -> . empty
    (179) empty -> .
